# rex

./: .gitignore  GO_MIGRATION_PLAN.md  LICENSE  Makefile  README.md  go.mod  go.sum  pyproject.toml  settings.example.toml  settings.toml
cmd/rex/: README.md  main.go
docs/: brainstorming.md  forge-proxy-experiment.md  forge-reliability-plan.md  hermes-reliability-ideas.md
docs/code-ideas/: memory-consolidation.py  memory-management-v2.py  memory-management.py
internal/agent/: agent.go  agent_test.go  confirm.go  prompt.go  tool.go  types.go
internal/app/: app.go  app_test.go
internal/audio/: config.go  decode.go  feedback.go  feedback_test.go  input.go  manager.go
internal/config/: config.go
internal/core/: context.go  events.go  state.go  statemachine.go
internal/reminders/: store.go  store_test.go
internal/scheduler/: delivery.go  scheduler.go  scheduler_test.go
internal/states/: confirming.go  deps.go  handlers.go  helpers.go  listening.go  phrases.go  phrases_test.go  processing.go  reminder.go  speaking.go  types.go  waiting.go
internal/stt/: strip.go  strip_test.go  transcriber.go  transcriber_integration_test.go  wav.go  wav_test.go
internal/timers/: manager.go  manager_test.go
internal/tools/: calculate.go  calculate_test.go  clock.go  clock_test.go  datetime.go  datetime_test.go  duration.go  duration_test.go  math.go  math_test.go  reminder.go  reminder_test.go  reminder_tool.go  time_tool.go  (+4 more)
scripts/: run_integration_evals.py
tests/: test_cli.py
wake_word_training_files/: fingerprint.pb  hey_recks_float16.tflite  saved_model.pb
(+89 files in other folders)
