[project]
name = "rex"
version = "0.1.0"
description = "A new Python project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
rex = "rex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rex"]

[dependency-groups]
dev = [
  "pytest>=9.0.1",
  "ruff>=0.14.5",
]


[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "N", "W"]

