[project]
name = "rex"
version = "0.1.0"
description = "A new Python project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.0.3",
  "langchain-openai>=0.3.0",
  "matplotlib>=3.10.7",
  "numpy>=2.3.4",
  "openwakeword==0.6.0",
  "openai>=1.0.0",
  "piper-tts>=1.3.0",
  "scipy>=1.16.3",
  "sounddevice>=0.5.3",
  "soundfile>=0.13.1",
  "torch>=2.9.1",
  "torchaudio>=2.9.1",
]

[project.scripts]
rex = "rex.cli:main"
record = "wake_word.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rex", "src/wake_word", "src/tts"]

[dependency-groups]
dev = [
  "pytest>=9.0.1",
  "ruff>=0.14.5",
]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I", "N", "W"]
